Make footer text black, change Services to Menu, display menu image prominently

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link active">Home</a></li>
-                <li><a href="#services" class="nav-link">Services</a></li>
+                <li><a href="#services" class="nav-link">Menu</a></li>
                 <li><a href="#reviews" class="nav-link">Reviews</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
@@ -60,55 +60,13 @@
         </div>
     </section>
 
-    <!-- Services Section -->
+    <!-- Menu Section -->
     <section id="services" class="services-section">
         <div class="container">
-            <h2>Our Services</h2>
-            <p class="section-subtitle">Expert barbering for every need</p>
-            <div class="services-grid">
-                <div class="service-card">
-                    <div class="service-icon">✂</div>
-                    <h3>Haircut & Styling</h3>
-                    <p>Professional cuts tailored to your style. Classic fades to modern designs.</p>
-                    <div class="service-features">
-                        <span>✓ Consultation</span>
-                        <span>✓ Premium tools</span>
-                    </div>
-                    <p class="price">$25 - $35</p>
-                </div>
-
-                <div class="service-card">
-                    <div class="service-icon">🧔</div>
-                    <h3>Beard Trim</h3>
-                    <p>Expert beard grooming and shape maintenance. Precision trimming at its finest.</p>
-                    <div class="service-features">
-                        <span>✓ Shape & trim</span>
-                        <span>✓ Beard oil</span>
-                    </div>
-                    <p class="price">$15 - $25</p>
-                </div>
-
-                <div class="service-card">
-                    <div class="service-icon">🪒</div>
-                    <h3>Straight Razor Shave</h3>
-                    <p>Traditional luxury shave. Hot towel service with master barber technique.</p>
-                    <div class="service-features">
-                        <span>✓ Hot towel</span>
-                        <span>✓ Straight razor</span>
-                    </div>
-                    <p class="price">$20 - $30</p>
-                </div>
-
-                <div class="service-card">
-                    <div class="service-icon">✨</div>
-                    <h3>Hot Towel Service</h3>
-                    <p>Relaxing treatment perfect with any service. Opens pores, softens hair.</p>
-                    <div class="service-features">
-                        <span>✓ Aromatherapy</span>
-                        <span>✓ Relaxation</span>
-                    </div>
-                    <p class="price">$5 - $10</p>
-                </div>
+            <h2>Our Menu</h2>
+            <p class="section-subtitle">Check out our full menu</p>
+            <div class="menu-image-container">
+                <img src="menu.webp" alt="Johnny's Barbershop Menu" class="menu-image">
             </div>
         </div>
     </section>
